fixed #12 - multi-line list alignment! That was easy :-)

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -85,7 +85,7 @@
     }
 
     ol, ul {
-        list-style-position: inside;
+        list-style-position: outside;
     }
 
     code {
